# capstone_data_expert

./: .gitignore  README.md  main.py  pyproject.toml
src/consumer/: time_series_db_consumer.py
src/orchestrator/: orchestrator.py
src/producer/: kafka_dummy_data_generation.py  kafka_topic_ingestion.py  simple_polygon_api.py
src/timescale_setup/: generate_custom_metrics.py
tests/: kafka_topic_test.py
